# untis-tui

./: .gitignore  Cargo.toml  Dockerfile.demo  LICENSE  README.md  index.tsx  package.json
.github/workflows/: release.yml
scripts/: debug-wednesday-overlap.ts  fetch-date-timetable.ts  fetch-day-raw-untis.ts  install.js
src/: demo.rs  lib.rs  main.rs  models.rs  shortcuts.rs  timetable_model.rs
src/app/: state.rs
src/app/state/: absences.rs  input.rs  mod.rs  requests.rs  selection.rs  tests.rs  text_input.rs  types.rs  worker.rs
src/components/: Absences.tsx  App.tsx  Login.tsx  MainShell.tsx  SettingsModal.tsx  TextInput.tsx  Timetable.tsx  colors.ts  inputCapture.tsx  shortcuts.test.ts  shortcuts.ts  useStableInput.ts
src/components/absences/: useAbsencesData.ts
src/components/timetable/: GridRow.tsx  LessonCell.tsx  TimetableDetails.tsx  TimetableFooter.tsx  TimetableHeader.tsx  TimetableTargetSearchOverlay.tsx  model.test.ts  model.ts  search.test.ts  search.ts  text.ts  useTimetableData.ts  useTimetableNavigation.ts
src/storage/: cache.rs  config.rs  mod.rs  secret.rs
src/ui/: absences.rs  login.rs  mod.rs  shared.rs  shell.rs  tests.rs  theme.rs  timetable.rs
src/utils/: cache.test.ts  cache.ts  config.ts  secret.ts  untis.test.ts  untis.ts
src/webuntis/: absences.rs  api.rs  auth.rs  client.rs  mod.rs  search.rs  tests.rs  timetable.rs
